fix(listenbrainz): apply border and spacing to global stats cards

--- a/styles/listenbrainz/catppuccin.user.css
+++ b/styles/listenbrainz/catppuccin.user.css
@@ -337,6 +337,11 @@
       border-color: transparent;
       box-shadow: fade(@surface0, 10%) 0 1px 1px, fade(@surface0, 15%) 0 2px 2px, fade(@surface0, 20%) 0 4px 4px;
 
+      &#listen-count-card {
+        margin-bottom: 5px;
+        border-color: @surface1;
+      }
+
       &.listen-card {
         .listen-thumbnail > div {
           color: @accent-color;
